add_library(common)

target_sources(
  common
  PRIVATE archive.cpp
          base64.cpp
          btea.cpp
          concatstream.cpp
          config-manager.cpp
          coroutines.cpp
          dbcs-str.cpp
          debug.cpp
          engine_data.cpp
          error.cpp
          events.cpp
          file.cpp
          fs.cpp
          gui_options.cpp
          hashmap.cpp
          language.cpp
          localization.cpp
          macresman.cpp
          memory.cpp
          memorypool.cpp
          md5.cpp
          mutex.cpp
          osd_message_queue.cpp
          path.cpp
          platform.cpp
          punycode.cpp
          random.cpp
          rational.cpp
          rendermode.cpp
          rotationmode.cpp
          str.cpp
          stream.cpp
          streamdebug.cpp
          str-base.cpp
          str-enc.cpp
          encodings/singlebyte.cpp
          system.cpp
          textconsole.cpp
          text-to-speech.cpp
          tokenizer.cpp
          translation.cpp
          unicode-bidi.cpp
          ustr.cpp
          util.cpp
          xpfloat.cpp
          zip-set.cpp
          std/std.cpp
  PRIVATE FILE_SET
          HEADERS
          FILES
          archive.h
          base64.h
          btea.h
          concatstream.h
          config-manager.h
          coroutines.h
          dbcs-str.h
          debug.h
          engine_data.h
          error.h
          events.h
          file.h
          fs.h
          gui_options.h
          hashmap.h
          language.h
          localization.h
          macresman.h
          memory.h
          memorypool.h
          md5.h
          mutex.h
          osd_message_queue.h
          path.h
          platform.h
          punycode.h
          random.h
          rational.h
          rendermode.h
          rotationmode.h
          str.h
          stream.h
          streamdebug.h
          str-base.h
          str-enc.h
          system.h
          textconsole.h
          text-to-speech.h
          tokenizer.h
          translation.h
          unicode-bidi.h
          ustr.h
          util.h
          xpfloat.h
          zip-set.h
)

add_subdirectory(formats)
add_subdirectory(compression)
add_subdirectory(lua)

if(ENABLE_EVENTRECORDER)
  target_sources(
    common
    PRIVATE recorderfile.cpp
    PRIVATE FILE_SET
            HEADERS
            FILES
            recorderfile.h
  )
endif()

if(USE_UPDATES)
  target_sources(
    common
    PRIVATE updates.cpp
    PRIVATE FILE_SET
            HEADERS
            FILES
            updates.h
  )
endif()
